<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
   >

    <ImageView
        android:id="@+id/frg_imageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_above="@+id/frg_textView"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:background="@null"
        android:contentDescription="@null"
        android:src="@drawable/logocopppy" />

    <TextView
        android:id="@+id/frg_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/frg_textView2"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16sp"
        android:text="@string/Forget_Password"
        android:textColor="@color/colorIcons"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/frg_textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_marginTop="32sp"
        android:background="@null"
        android:text="@string/give_id"
        android:textColor="@color/colorPrimaryText"
        android:textSize="14dp" />


    <EditText
        android:id="@+id/frg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/frg_textView2"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="32dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColor="@color/colorSecondaryText" />

    <Button
        android:id="@+id/btn_reset"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/frg_email"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_reset"
        android:textColor="@color/colorIcons"
        android:textColorLink="@color/colorPrimaryDark" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="29dp"
        android:background="@null"
        android:text="@string/btn_back"
        android:textColor="@color/colorPrimaryText"
        android:textColorLink="@color/colorPrimaryDark" />
</RelativeLayout>